[package]
name = "rust_sd"
version = "0.1.0"
authors = ["Jan Doms <jan.doms@gmail.com>"]

[dependencies]
bytes = "0.4"
futures = "0.1"
futures-cpupool = "0.1"
nix = "0.9.0"
serde_derive = "1.0"
serde = "1.0"
serde_json = "1.0"
tokio-core = "0.1"
tokio-io = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"
